force-app/main/default/objects/FlowExecutionActionHistory__c/FlowExecutionActionHistory__c.object-meta.xml
<CustomObject>
    <label>Histórico de Execução de ações</label>
    <nameField>
        <label>Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Históricos de Execução de ações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>