force-app/main/default/objects/FlowExecutionActionHistory__c/fields/FlowExecutionStepHistory__c.field-meta.xml
<CustomField>
    <fullName>FlowExecutionStepHistory__c</fullName>
    <label>Histórico de Execução de Fluxo</label>
    <referenceTo>FlowExecutionStepHistory__c</referenceTo>
    <relationshipLabel>Históricos de Execução de ações</relationshipLabel>
    <relationshipName>FlowExecutionStepHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>